<resources>
    <string name="app_name">AJR-27012018-WORKAROUND-FRAGMENTS</string>
    <string name="action_settings">Settings</string>
    <string name="main_text">An Android application for working with Fragments.\nDated : 27-Jan-2018 11:30 AM \n</string>
    <string name="title_activity_split">ActivitySplit</string>
    <string name="split_activity">Split Activity</string>
    <string name="exit">Exit</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="android_4_0_new_features">Android 4.0 New Features</string>
    <string name="intro_to_android_development">Intro to Android Development</string>
    <string name="android_programming_with_intents">Android Programming with Intents</string>
    <string name="improving_ui_interaction_with_android_actionbar">Improving UI Interaction with Android ActionBar</string>
    <string name="android_async_programming_and_services">Android Async Programming and Services</string>
    <string name="desc_text_initial">This is the place where each individual course\'s description will appear</string>
    <string name="title_activity_seperate_one">ActivitySeperateOne</string>
    <string name="title_activity_seperate_two">ActivitySeperateTwo</string>
    <string name="seperate_activity">Seperate Activity</string>
    <string name="title_activity_button_click">ActivityButtonClick</string>
    <string name="click_count_0">Click count: 0</string>
    <string name="push_me">Push Me</string>
    <string name="button_handling">Button Handling</string>
    <string name="transaction_builder_fragment_one">Transaction Builder Fragment - One</string>
    <string name="transaction_builder_fragment_two">Transaction Builder Fragment - Two</string>
    <string name="transactions_main_text">Transactions</string>
    <string name="rmv_then_add_2">Rmv then Add 2</string>
    <string name="replace_with_1">Replace with 1</string>
    <string name="mov_prv">Move Prev</string>
    <string name="attach">Attach</string>
    <string name="detach">Detach</string>
    <string name="fragments_list_type">Fragments - List Type</string>
    <string name="fragments_web_view">Fragments - Web View</string>
    <string name="do_you_really_want_to">Do you really want to?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fragments_dialog_type">Fragments - Dialog Type</string>
    <string name="dialog_alert">Dialog Alert</string>
    <string name="dialog_basic">Dialog Basic</string>
    <string name="dialog_as_fragment">Dialog as Fragment</string>
    <string name="fragment_action_bar">Fragment - Action Bar</string>
    <string name="fragment_list_navigation">Fragment - List Navigation</string>
    <string name="fragment_tabbed_navigation">Fragment - Tabbed Navigation</string>
    <string name="android_4_0_course">Android 4.0 Course</string>
    <string name="android_intents_course">Android Intents Course</string>
    <string name="list">List</string>
    <string name="tabbed">Tabbed</string>
    <string name="android_fragment_for_action_bar_extension_one">Android Fragment for action bar - Extension One</string>
    <string name="android_fragment_for_action_bar_extension_two">Android Fragment for action bar - Extension Two</string>
    <string name="android_4_0_opt_1">Android 4.0 Opt 1</string>
    <string name="android_4_0_opt_2">Android 4.0 Opt 2</string>
    <string name="intents_only_option">Intents Only Option</string>
    <string name="title">Choose a Month</string>
    <string name="title_activity_tabbed_navigation">ActivityTabbedNavigation</string>
    <string name="title_activity_split_action_bar">ActivitySplitActionBar</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="split_action_bar">Split Action Bar</string>
    <string name="call_service_async_services">Call Service - Async Services</string>
</resources>
