<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.workaround.ajeesh.ajr_27012018_workaround_fragments.MainFragmentsActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuSplitActivity"
        android:title="@string/split_activity" />
    <item
        android:id="@+id/menuSeperateActivity"
        android:title="@string/seperate_activity" />
    <item
        android:id="@+id/menuButtonHandlingActivity"
        android:title="@string/button_handling" />
    <item
        android:id="@+id/menuTransactionsActivity"
        android:title="@string/transactions_main_text" />
    <item
        android:id="@+id/menuListTypeActivity"
        android:title="@string/fragments_list_type" />
    <item
        android:id="@+id/menuWebViewTypeActivity"
        android:title="@string/fragments_web_view" />
    <item
        android:id="@+id/menuDialogTypeActivity"
        android:title="@string/fragments_dialog_type" />
    <item
        android:id="@+id/menuFragmentActionBarActivity"
        android:title="@string/fragment_action_bar" />
    <item
        android:id="@+id/menuSplitActionBarActivity"
        android:title="@string/split_action_bar" />
    <item
        android:id="@+id/menuExit"
        android:title="@string/exit" />
</menu>
