<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.workaround.ajeesh.ajr_27012018_workaround_fragments.MainFragmentsActivity">
    <item
        android:id="@+id/menuAndroid40CourseFragment"
        android:title="@string/android_4_0_course" />
    <item
        android:id="@+id/menuIntentsCourseFragment"
        android:title="@string/android_intents_course" />
    <item
        android:id="@+id/menuFragmentListNavigationActivity"
        android:title="@string/fragment_list_navigation" />
    <item
        android:id="@+id/menuFragmentTabbedNavigationActivity"
        android:title="@string/fragment_tabbed_navigation" />
    <item
        android:id="@+id/menuExit"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/exit"
        app:showAsAction="ifRoom" />
</menu>
