<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.workaround.ajeesh.ajr_27012018_workaround_fragments.Fragments.FragmentDialogType">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/do_you_really_want_to" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnYes"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no" />
    </LinearLayout>

</LinearLayout>
